Show weights not working with a weight edit modifier in edit mode #35911

Closed
opened 2013-06-29 11:22:40 +02:00 by Thomas Beck · 7 comments
Member

%%%--- Operating System, Graphics card ---
Ubuntu 64, 16gb ram, 2* nvidia gtx560tioc

- Blender version with error, and version that worked ---

current trunk does not work (just compiled myself a clean one and tried a buildbot build)

- Short description of error ---

I'd like to show the vertex weights while in edit mode and have a modifier on my plane that alters the vertex weight. When I set up the modifier to show up in edit mode too, the mesh hides all its weights and looks like as I've never ticked the "show weights" checkbox.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the blend, go into the edit mode (if not already in it) and click on the modifiers "Use modifier while in edit mode" -> The weights will disappear.

Greetings, Thomas %%%

%%%--- Operating System, Graphics card --- Ubuntu 64, 16gb ram, 2* nvidia gtx560tioc - Blender version with error, and version that worked --- current trunk does not work (just compiled myself a clean one and tried a buildbot build) - Short description of error --- I'd like to show the vertex weights while in edit mode and have a modifier on my plane that alters the vertex weight. When I set up the modifier to show up in edit mode too, the mesh hides all its weights and looks like as I've never ticked the "show weights" checkbox. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the blend, go into the edit mode (if not already in it) and click on the modifiers "Use modifier while in edit mode" -> The weights will disappear. Greetings, Thomas %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%added support r57891.%%%

%%%added support r57891.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Hi Campbell,

just came back from holidays and saw your fix... great! Thank you very much!%%%

%%%Hi Campbell, just came back from holidays and saw your fix... great! Thank you very much!%%%
Author
Member

%%%Sorry,

but I tested again, and altough I see the weights in the edit mode now, I don't see the weight-change! Just open up the supplied blend and have a look (alt+A) in Weight paint mode vs edit mode..

Greetings!%%%

%%%Sorry, but I tested again, and altough I see the weights in the edit mode now, I don't see the weight-change! Just open up the supplied blend and have a look (alt+A) in Weight paint mode vs edit mode.. Greetings!%%%
Author
Member

%%%Appended the file...%%%

%%%Appended the file...%%%

%%%Fixed r58009. both cases work now :)%%%

%%%Fixed r58009. both cases work now :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35911
No description provided.