fix [#35911] Show weights not working with a weight edit modifier in edit mode